Update Build.sh